[tool.poetry]
name = "ihc-attribution"
version = "0.1.0"
description = ""
authors = ["Manel Villar <manelvf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
apache-airflow = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
